packages/@resist.js/svelte-kit/test/apps/basics/src/routes/errors/load-server.svelte
<script context="module">
	/** @type {import('@resistjs/svelte-kit').Load} */
	export async function load() {
		throw new Error('Crashing now');
	}
</script>
